[workspace]
[package]
name = "zk-email"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rsa = { version = "0.9.7", optional = true }
sp1-rsa = { package = "rsa", git = "https://github.com/sp1-patches/RustCrypto-RSA", branch = "patch-rsa-v0.9.6", optional = true }
serde = "1.0.200"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
sha2-sp1 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1", optional = true }
sha2-risc0 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.6-risczero.0", optional = true }
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"], optional = true }

[features]
risc0 = ["dep:rsa", "dep:sha2-risc0", "dep:risc0-zkvm"]
sp1 = ["dep:sp1-rsa", "dep:sha2-sp1"]
